--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -78,4 +82,7 @@ dependencies {
 
     // material components
     implementation "com.google.android.material:material:$materialComponentsVersion"
+
+    // image loader
+    implementation "io.coil-kt:coil:1.0.0-rc3"
 }
