--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,18 @@ dependencies {
 
     // image loader
     implementation "io.coil-kt:coil:1.0.0-rc3"
+
+    // runner + rules
+    testImplementation 'androidx.test:runner:1.3.0'
+    testImplementation 'androidx.test:rules:1.3.0'
+
+    // assertions
+    testImplementation 'androidx.test.ext:junit:1.1.2'
+
+    // mockito
+    testImplementation "org.mockito:mockito-core:$mockitoVersion"
+    testImplementation "org.mockito:mockito-inline:$mockitoVersion"
+    testImplementation "com.nhaarman:mockito-kotlin-kt1.1:$mockitoKotlinVersion"
+    testImplementation "org.powermock:powermock-api-mockito2:$powerMockVersion"
+    testImplementation "org.powermock:powermock-module-junit4:$powerMockVersion"
 }
