--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".scenes.employeedetail.EmployeeDetailActivity"
+            android:configChanges="orientation|screenSize|screenLayout"
+            android:label="@string/app_name" />
+        <activity
             android:name=".scenes.maindirectory.MainDirectoryActivity"
             android:configChanges="orientation|screenSize|screenLayout">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
